name:                adventofcode2016
version:             0.1.0.0
synopsis:            2016 Advent of Code solutions
description:         Please see README.md
homepage:            https://github.com/purcell/adventofcode2016#readme
license:             BSD3
license-file:        LICENSE
author:              Steve PUrcell
maintainer:          steved@sanityinc.com
copyright:           2016 Steve Purcell
category:            Other
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Day1
                     , Day2
                     , Day3
                     , Day4
                     , Day5
                     , Day6
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , mtl >= 2.2.1
                     , parsec >= 3
                     , cryptonite >= 0.19
                     , bytestring >= 0.10
  default-language:    Haskell2010

executable adventofcode2016
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , adventofcode2016
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/purcell/adventofcode2016
